--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "blocpedia",
   "version": "1.0.0",
+  "engines": {
+    "node": "9.4.0"
+  },
   "description": "an appp to share, collaborate and create wikis",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "test": "set NODE_ENV=test && jasmine",
-    "postinstall": "bower install && grunt build"
+    "test": "set NODE_ENV=test && jasmine"
   },
   "author": "Camila",
   "license": "ISC",
@@ -16,7 +18,12 @@
   },
   "dependencies": {
     "dotenv": "^5.0.0",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "latest-version": "^4.0.0"
+    "latest-version": "^4.0.0",
+    "morgan": "^1.9.1",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.32.6"
   }
 }
