design static.js done

--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -19,7 +19,7 @@
   "production": {
     "username": "admin",
     "password": null,
-    "database": "blocpedia-production",
+    "database": "cahcnc91-blocpedia",
     "host": "127.0.0.1",
     "dialect": "postgres",
     "logging": false,
