--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "admin",
+    "username": "postgres",
     "password": null,
     "database": "blocpedia-dev",
     "host": "127.0.0.1",
@@ -9,7 +9,7 @@
     "operatorsAliases": false
   },
   "test": {
-    "username": "admin",
+    "username": "postgres",
     "password": null,
     "database": "blocpedia-test",
     "dialect": "postgres",
