--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "blocpedia",
   "version": "1.0.0",
   "engines": {
-    "node": "9.4.0"
+    "node": "9.4.0",
+    "npm": "6.1.0"
   },
   "description": "an appp to share, collaborate and create wikis",
   "main": "src/server.js",
