--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -24,6 +24,6 @@
     "dialect": "postgres",
     "logging": false,
     "operatorsAliases": false,
-    "use_env_variable": "HEROKU_POSTGRESQL_PUCE_URL:"
+    "use_env_variable": "HEROKU_POSTGRESQL_PUCE_URL"
   }
 }
