--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "async": "^2.6.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "content-security-policy": "^0.3.3",
     "dotenv": "^5.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
