--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "content-security-policy": "^0.3.3",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^5.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
