--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Camila",
   "license": "ISC",
   "devDependencies": {
+    "faker": "^4.1.0",
     "jasmine": "^3.0.0",
     "request": "^2.83.0"
   },
