--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "async": "^2.6.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
     "content-security-policy": "^0.3.3",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
