--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   "scripts": {
     "start": "node src/server.js",
     "test": "set NODE_ENV=test && jasmine",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js watch",
+    "build:css": "postcss src/assets/css/application.css -p src/assets/dist/tailwind.css",
+    "watch": "watch \"npm run build:css\" ./src "
   },
   "author": "Camila",
   "license": "ISC",
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "cssnano": "^4.1.10",
     "faker": "^4.1.0",
     "jasmine": "^3.0.0",
     "nodemon": "^1.19.1",
-    "request": "^2.83.0",
-    "webpack": "^4.39.2"
+    "postcss": "^7.0.17",
+    "postcss-cli": "^6.1.3",
+    "request": "^2.83.0"
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
@@ -45,6 +50,8 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.32.6",
     "sequelize-cli": "^4.1.1",
-    "stripe": "^6.12.1"
+    "stripe": "^6.12.1",
+    "tailwindcss": "^1.1.2",
+    "watch": "^1.0.2"
   }
 }
